fixing contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -80,11 +80,7 @@ h1 {
 }
 
 p {
-    font-size: 1rem;
+    font-size: 18px;
     font-family: "Roboto", sans-serif;
     text-align: center;
-}
-
-font {
-    font-size: 14px;
 }
